@@ -669,6 +669,8 @@ changes to your code:
   system ID in the wrong order.  This has been corrected; applications
   relying on the wrong order need to be fixed.
 
+\item \function{fcntl.ioctl} now warns if the mutate arg is omitted.
+
 \end{itemize}
 
 
